codex-rs/tui/src/chatwidget/slash_dispatch/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_disabled.snap
---
source: tui/src/chatwidget/slash_dispatch/account_settings_tests.rs
expression: "render_settings(AutomaticAccountSelection::Disabled)"
---

  Accounts
  Automatic account selection is disabled. Restart Codex to use changes.

  1. Enable automatic selection             Choose and switch accounts when
                                            needed.
› 2. Disable automatic selection (current)  Stay on the current or manually
                                            selected account.



  Press enter to confirm or esc to go back
