codex-rs/tui/src/chatwidget/slash_dispatch/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_toggle_success.snap
---
source: tui/src/chatwidget/slash_dispatch/account_settings_tests.rs
expression: success
---
Automatic account selection disabled. Restart Codex to use this setting.
