codex-rs/tui/src/chatwidget/slash_dispatch/snapshots/codex_tui__chatwidget__slash_dispatch__account_settings__tests__account_settings_toggle_verification_failure.snap
---
source: tui/src/chatwidget/slash_dispatch/account_settings_tests.rs
expression: message
---
Automatic account selection was saved, but Codex could not verify it for this project: connection closed
